--- a/HBPWebUI/Views/Browse/Category.cshtml
+++ b/HBPWebUI/Views/Browse/Category.cshtml
@@ -37,7 +37,8 @@
         <a 
             asp-area="" 
             asp-controller="Browse" 
-            asp-action="Category">@category
+            asp-action="Category"
+            asp-route-category="@category">@category
         </a>
     </li>
 }
