--- a/HBPWebUI/Views/Shared/_Layout.cshtml
+++ b/HBPWebUI/Views/Shared/_Layout.cshtml
@@ -1,7 +1,10 @@
 ﻿@inject HBPUI.Library.Endpoint.ICategoryEndpoint categoryEndpoint
 @inject HBPWebUI.Helpers.ICategoryHelper categoryHelper
+@inject HBPWebUI.Helpers.IBasketHelper basketHelper
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @{
     var categories = categoryHelper.CreateNestedCategories(await categoryEndpoint.GetAllCategories());
+    var totalBasketItems = basketHelper.GetSessionBasket(HttpContextAccessor.HttpContext).TotalItems;
 }
 
 <!DOCTYPE html>
@@ -149,6 +152,10 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket mx-1" viewBox="0 0 16 16">
                           <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1v4.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 13.5V9a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h1.217L5.07 1.243a.5.5 0 0 1 .686-.172zM2 9v4.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V9H2zM1 7v1h14V7H1zm3 3a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 4 10zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 6 10zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3A.5.5 0 0 1 8 10zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 1 .5-.5zm2 0a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 1 .5-.5z"/>
                         </svg>Basket
+                        @if (totalBasketItems > 0)
+                        {
+                            <span class="badge bg-secondary">@totalBasketItems</span>
+                        }
                     </a>
                 </div>
             </div>
