--- a/HBPWebUI/Views/Shop/Basket.cshtml
+++ b/HBPWebUI/Views/Shop/Basket.cshtml
@@ -7,7 +7,7 @@
     <div class="container py-5">
         <form>
             <div class="py-3 text-center">
-                <h1 class="h4 mb-3 fw-normal">Basket (@Model.BasketItems.Count)</h1>
+                <h1 class="h4 mb-3 fw-normal">Basket (@Model.TotalItems)</h1>
             </div>
             @if (Model.BasketItems.Count == 0)
             {
@@ -70,7 +70,7 @@
                         <div class="pb-3">
                             <h4 class="d-flex justify-content-between align-items-center mb-3">
                             <span class="text-primary">Summary</span>
-                            <span class="badge bg-primary rounded-pill">@Model.BasketItems.Count</span>
+                            <span class="badge bg-primary rounded-pill">@Model.TotalItems</span>
                             </h4>
                             <ul class="list-group mb-3">
                                 @foreach (var basketItem in Model.BasketItems)
